Fix: registration page was bad on mobile

--- a/static/runestone-custom-sphinx-bootstrap.css
+++ b/static/runestone-custom-sphinx-bootstrap.css
@@ -324,7 +324,8 @@ div.flash {
     padding-top: 3px;
 }
 
-#web2py_user_form td {
+#web2py_user_form td,
+#web2py_register_form td {
     padding-bottom: 15px;
 }
 
